--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,9 +40,11 @@ h1{
     font-size: 1.3rem;
 }
 
-
-.nav-item:active,
 .nav-item:hover{
     color: #21897e;
     text-decoration: underline;
+}
+
+.nav-link.active {
+    color: red;
 }
