--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -35,3 +35,16 @@ h1{
   color:antiquewhite;
   background-color: #3ba99c;
 }
+
+.nav-item{
+    font-size: 1.3rem;
+}
+
+.nav-item:hover{
+    color: #21897e;
+    text-decoration: underline;
+}
+
+.nav-link.active {
+    color: red;
+}
